# sleepfi

./: .gitignore  README.md  app.json  eas.json  index.ts  package-lock.json  package.json  pitch-deck.html  polyfills.ts
anchor/: Anchor.toml
anchor/programs/sleepfi/: Cargo.toml
anchor/programs/sleepfi/src/: lib.rs
app/: _layout.tsx
app/(app)/: _layout.tsx  challenge.tsx  dashboard.tsx  leaderboard.tsx  log-sleep.tsx  profile.tsx  rewards.tsx
app/(app)/(tabs)/: _layout.tsx  index.tsx  leaderboard.tsx  treasury.tsx
app/(auth)/: _layout.tsx  index.tsx
app/api/: challenges+api.ts  leaderboard+api.ts  pool+api.ts  sleep+api.ts  users+api.ts
app/api/rewards/: claim+api.ts
constants/: theme.ts
hooks/: useChallenge.ts  useSleep.ts  useWallet.ts
lib/: anchor.ts  anchorServer.ts  api.ts  db.ts  healthConnect.ts  notifications.ts  sleepfi-idl.json  solana.ts  treasury.ts
sleepfi-program/: Anchor.toml
sleepfi-program/programs/sleepfi-program/: Cargo.toml
sleepfi-program/programs/sleepfi-program/src/: lib.rs
sleepfi-program/tests/: sleepfi-program.ts
