[package]
name = "sleepfi"
version = "0.1.0"
description = "SleepFi - Sleep-to-Earn on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sleepfi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
